--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Calendar</title>
-    <link rel='stylesheet' href="./calendar.css">
+    <link rel='stylesheet' href="../dist/calendar.css">
 </head>
 <body>
   <div class="bwCalendar"></div>
 
-  <script src="./calendar.js" type="text/javascript"></script>
+  <script src="../dist/calendar.js" type="text/javascript"></script>
   <script type="text/javascript">
     var calendar = new Calendar({
       target: document.querySelector(".bwCalendar")
