--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="../dist/calendar.js" type="text/javascript"></script>
   <script type="text/javascript">
     var calendar = new Calendar({
-      target: document.querySelector(".bwCalendar")
+      target: document.querySelector(".bwCalendar"),
     });
   </script>
 </body>
