--- a/example/index.html
+++ b/example/index.html
@@ -31,6 +31,10 @@
       },
       onGridChange: function(calendar) {
         updateInfo(document.querySelector(".date-grid"), calendar.date.grid);
+      },
+      onSelect: function(calendar) {
+        console.log('Date selected', calendar);
+        // @TODO update $selected
       }
     });
 
