onSelect, setCurrentDayElement, year transitions inproper data fix

--- a/example/index.html
+++ b/example/index.html
@@ -33,8 +33,7 @@
         updateInfo(document.querySelector(".date-grid"), calendar.date.grid);
       },
       onSelect: function(calendar) {
-        console.log('Date selected', calendar);
-        // @TODO update $selected
+        updateInfo(document.querySelector(".date-selected"), calendar.date.selected);
       }
     });
 
