--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calendar</title>
-    <link rel='stylesheet' href="../dist/calendar.css">
+    <link rel='stylesheet' href="calendar.css">
     <style>
       .info {
         margin-top: 40px;
@@ -21,7 +21,7 @@
     <p>Grid date: <span class="date-grid"></span></p>
   </div>
 
-  <script src="../dist/calendar.js" type="text/javascript"></script>
+  <script src="calendar.js" type="text/javascript"></script>
   <script type="text/javascript">
     var calendar = new Calendar({
       target: document.querySelector(".bwCalendar"),
